--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "moment": "^2.29.1",
     "mongoose": "^5.11.13",
     "mongoose-pagination": "^1.0.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
